<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:gravity="center"
        android:text="@string/title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txtPlantName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginLeft="20dp"
                android:text="@string/plantname"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editPlantName"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:ems="10"
                android:hint="@string/plantname_hint"
                android:inputType="textPersonName" >

                <requestFocus />
            </EditText>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="54dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/txtDiseaseType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginLeft="20dp"
                    android:text="@string/diseasetype"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/diseaseTypeSpinner"
                    android:layout_width="139dp"
                    android:layout_height="45dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="283dp"
                android:layout_height="54dp"
                android:layout_weight="0.01"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/txtWeather"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginLeft="20dp"
                    android:text="@string/weather"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/weather_Spinner"
                    android:layout_width="139dp"
                    android:layout_height="45dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="283dp"
                android:layout_height="54dp"
                android:layout_weight="0.01"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/txtSoilCondition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginLeft="20dp"
                    android:text="@string/soilCondition"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/soil_condition_Spinner"
                    android:layout_width="match_parent"
                    android:layout_height="45dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="283dp"
                android:layout_height="54dp"
                android:layout_weight="0.01"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/txtDistrict"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginLeft="20dp"
                    android:text="@string/district"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/district_Spinner"
                    android:layout_width="match_parent"
                    android:layout_height="45dp" />
            </LinearLayout>

            <TextView
                android:id="@+id/txtRegion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginLeft="20dp"
                android:text="@string/region"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editRegion"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:ems="10"
                android:hint="@string/region_hint"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/txtDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginLeft="20dp"
                android:text="@string/description"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editDescription"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:ems="10"
                android:hint="@string/description_hint"
                android:inputType="textMultiLine" />

            <TextView
                android:id="@+id/txtDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginLeft="20dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="54dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="0.18"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/buttonClear"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btSendDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="24dp"
                    android:text="@string/sendDetails"
                    android:textSize="18sp" />

                <ImageButton
                    android:id="@+id/imagebtUpload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:contentDescription="@string/upload"
                    android:src="@drawable/camere" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>